<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tema"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.moises.proyectomovilesi.ActivityTema">

    <Toolbar
        android:id="@+id/ToolbarOpcionesT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbar">

        <Button
            android:id="@+id/AyudaT"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_help_black_48dp"
            android:layout_marginRight="30dp"
            />
        <Button
            android:id="@+id/Opcion1T"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_one_black_48dp"
            android:layout_marginRight="25dp"/>
        <Button
            android:id="@+id/Opcion2T"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_two_black_48dp"
            android:layout_marginRight="25dp"/>
        <Button
            android:id="@+id/Opcion3T"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_3_black_48dp"
            android:layout_marginRight="25dp"/>

    </Toolbar>

    <TextView
        android:id="@+id/Temas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tema"
        android:textColor="@color/blanco"
        android:maxHeight="500dp"
        android:maxWidth="500dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ToolbarOpcionesT"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ButtonT1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/_Tema1"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/Temas"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ButtonT2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/_Tema2"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonT1"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/ButtonT1" />

    <Button
        android:id="@+id/ButtonT3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Tema3"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonT2"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/ButtonT2" />

    <Button
        android:id="@+id/ButtonT4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/_Tema4"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonT3"
        android:layout_alignStart="@+id/ButtonT3"
        android:layout_marginTop="35dp" />

</RelativeLayout>
