<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leccion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.moises.proyectomovilesi.ActivityLeccion">


    <Toolbar
        android:id="@+id/ToolbarOpcionesL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbar">

        <Button
            android:id="@+id/AyudaL"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_help_black_48dp"
            android:layout_marginRight="30dp"
            />
        <Button
            android:id="@+id/Opcion1L"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_one_black_48dp"
            android:layout_marginRight="25dp"/>
        <Button
            android:id="@+id/Opcion2L"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_two_black_48dp"
            android:layout_marginRight="25dp"/>
        <Button
            android:id="@+id/Opcion3L"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_looks_3_black_48dp"
            android:layout_marginRight="25dp"/>

    </Toolbar>

    <TextView
        android:id="@+id/Leccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Leccion"
        android:textColor="@color/blanco"
        android:maxHeight="500dp"
        android:maxWidth="500dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ToolbarOpcionesL"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ButtonL1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Leccion1"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/Leccion"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/ButtonL2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Leccion2"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonL1"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/ButtonL1" />

    <Button
        android:id="@+id/ButtonL3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Leccion3"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonL2"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/ButtonL2" />

    <Button
        android:id="@+id/ButtonL4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Leccion4"
        android:textColor="@color/blanco"
        android:background="@color/botones"
        android:layout_below="@+id/ButtonL3"
        android:layout_alignStart="@+id/ButtonL3"
        android:layout_marginTop="35dp" />

</RelativeLayout>
